# RICH

./: README.md
code/: CMakeLists.txt  convert_to_csr.py  directed_graph.cpp  directed_graph.h  dp_with_filter_full.cpp  dp_with_filter_full_atmost_k.cpp
data/: test1.txt
